--- a/data_volume/config.json
+++ b/data_volume/config.json
@@ -1,5 +1,5 @@
 { "port": 80
 , "url-base": "https://registry.node-modules.io"
-, "ui-url": "https://browse.node-modules.io"
+, "ui-url": "https://ui.node-modules.io"
 , "directory": "/srv/data_volume/db"
 }
